# neurosim

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  codecov.yml  docker-compose.yml  figure_aware.py  pyproject.toml  test_api.py  visualize_simulation.py  viz_requirements.txt
.github/workflows/: tests.yml
src/neurosim/: api.py  run.py
src/neurosim/api/: __init__.py  main.py
src/neurosim/core/: __init__.py  simulator.py  task_manager.py
src/neurosim/models/: simulation.py
src/neurosim/models/cells/: simple_neuron.py
src/neurosim_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_simulator.py
