[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neurosim-service"
version = "0.1.0"
authors = [
    {name = "Your Name"}
]
description = "A neuron simulation service similar to BlueNaaS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.21.1",
    "pydantic>=2.0.0",
    "neuron>=8.2",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-multipart",
    "aiofiles"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["neurosim*"]

[tool.black]
line-length = 100
target-version = ["py310"]
