[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurosim-service"
version = "0.1.0"
description = "A neuron simulation service"
authors = [{name = "Kerem Kurban", email = "keremkurban@hotmai.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.21.1",
    "pydantic>=2.0.0",
    "neuron>=8.2",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-multipart",
    "aiofiles"
]

[project.optional-dependencies]
dev = [    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.24.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "ruff>=0.1.0"
]

[tool.setuptools]
packages = ["neurosim"]
package-dir = {"" = "src"}

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
target-version = "py310"
line-length = 100
fix = true
unsafe-fixes = false

select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "I",   # isort
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "N",   # pep8-naming
]

ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
]

[tool.ruff.isort]
known-first-party = ["neurosim"]

[tool.ruff.per-file-ignores]
"tests/*" = ["D"]  # Ignore docstring requirements in tests
"**/__init__.py" = ["D104"]  # Ignore docstring requirements in __init__.py files

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_optional = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "7.3"
addopts = "-v -ra --cov=neurosim --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"